Ignored ncrunch project files. Ripped out the IErrorMessageGenerator and changed the FaultException to be of type <ObjectValidationException> in order to pass back the ValidationResults.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,11 @@ _ReSharper*/
 [Tt]humbs.db
 [Tt]est[Rr]esult*
 [Bb]uild[Ll]og.*
+
 *.resharper
+
 *.ncrunchsolution
+*.ncrunchproject
+
+#nuget
 packages/
