--- a/src/WCFDataAnnotations/WCFDataAnnotations.csproj
+++ b/src/WCFDataAnnotations/WCFDataAnnotations.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,12 +47,13 @@
     <Compile Include="NullCheckObjectValidator.cs" />
     <Compile Include="DataAnnotationsObjectValidator.cs" />
     <Compile Include="IObjectValidator.cs" />
-    <Compile Include="ObjectValidationException.cs" />
+    <Compile Include="ObjectValidationFault.cs" />
     <Compile Include="ValidatableObjectValidator.cs" />
     <Compile Include="ValidateDataAnnotationsBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidateDataAnnotationsBehaviorExtensionElement.cs" />
     <Compile Include="ValidatingParameterInspector.cs" />
+    <Compile Include="ValidationError.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
